apps/base/media/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
    app.kubernetes.io/name: radarr
spec:
  selector:
    app: radarr
  ports:
    - name: http
      protocol: TCP
      port: 7878
      targetPort: 7878
  type: ClusterIP
